# CognitiveRAG

./: .gitignore  .venv  AGENT_RULES.md  AUTONOMOUS_REPAIR_LOOP.md  CognitiveRAG.sln  README.md  example_exec.py  first_body.json  pyproject.toml
CognitiveRAG/: CognitiveRAG.pyproj  Dockerfile  PRODUCTION.md  REPAIR_WORKFLOW.md  __init__.py  agents.py  app.py  cli.py  client.py  config.py  knowledge_base.py  llm_provider.py  main.py  main_server.py  pyproject.toml  requirements.txt  retrieval_contract.py  retrieval_metadata.py  retrieval_modes.py  retriever.py  utils.py
CognitiveRAG/agents/: critic.py  orchestrator.py  planner.py  synthesizer.py
CognitiveRAG/api/: dependencies.py
CognitiveRAG/cognitive_rag/: pyvenv.cfg
CognitiveRAG/core/: lifecycle.py  logging.py  settings.py
CognitiveRAG/crag/: __init__.py
CognitiveRAG/docs/: gemini_report.txt  ultimate-cognitive-rag-system-report.md
CognitiveRAG/generated_files/: cognitive_rag_main.py  cognitive_rag_server.py  cognitive_rag_system.py  evaluation_suite.py  knowledge_corpus_builder.py  main.py  rag_qa.py  script.py  thematic_analyzer.py  topic_graph.py
CognitiveRAG/ingest/: chunking.py  jobs.py  loaders.py  pipeline.py
CognitiveRAG/llm/: clients_ollama.py  factory.py  prompts.py  schemas.py
CognitiveRAG/memory/: episodic_store.py  profile_store.py  reasoning_store.py  reasoning_success.py  task_store.py  web_promoted_store.py
CognitiveRAG/retrieval/: hybrid.py  policy.py  rerank.py  router.py  web.py
CognitiveRAG/schemas/: agent.py  api.py  memory.py  retrieval.py
CognitiveRAG/tests/: conftest.py  (+38 more)
(+343 files in other folders)
