[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "CognitiveRAG"
version = "0.1.0"
description = "CognitiveRAG memory/agent utilities"
keywords = ["rag", "memory", "retrieval", "context-selection", "openclaw"]
authors = [ { name = "ictin" } ]
readme = "../README.md"
requires-python = ">=3.8"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
